<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmenti.MeceviFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/naslovJezik"
            android:text="@string/promijenite_jezik"
            style="@style/naslovFragmenti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/naslovJezik">

            <RadioButton
                android:id="@+id/hrRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/loptica"
                android:text="@string/hrvatski" />

            <RadioButton
                android:id="@+id/engRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/loptica"
                android:text="@string/engleski" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>